k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-demo
  labels:
    name: fastapi-demo
    app.kubernetes.io/name: fastapi-demo
